front-end-nc-news/src/App.css
.App {
  text-align: center;
}

body {
  margin: 0;
  font-family: Arial, Helvetica, sans-serif;
  background-color: rgb(187, 187, 187);
}

.nav {
  overflow: hidden;
  background-color: #333;
}

.nav a {
  float: left;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  font-size: 17px;
}

.nav a:hover {
  background-color: #ddd;
  color: black;
}

.nav a.active {
  background-color: #4CAF50;
  color: white;
}


.userInfo {
  float: right;
  position: absolute;
  right: 0px;
  color: #f1f1f1;
  text-align: right;
  padding: 4px 15px;
  text-decoration: none;
  font-size: 18px; 
  line-height: 25px;
  border-radius: 4px;
}

.userInfo::after {
  content: '';
  display: table;
  clear: both;
}

.header {
  
    overflow: hidden;
    background-color: #f1f1f1;
    padding: 20px 10px;
  
}

.articleContainer {

  background-color: rgba(231, 231, 231, 0.973);
  -webkit-border-radius: 20px;
  -moz-border-radius: 20px;
  border-radius: 10px;
  padding: 5px;
 
  border-style: solid;
  border-color: transparent;
  border-width: thin;
  width: 1200px;
  margin: 10px auto;
  width: 60%;
}

.articleContainer:hover {

  border-color: #333;
  
}

.commentsContainer {
  
  background-color: gray;
  -webkit-border-radius: 20px;
  -moz-border-radius: 20px;
  border-radius: 20px;
 
}

.singleCommentContainer {
  background-color: rgba(165, 165, 165, 0.973);
  -webkit-border-radius: 10px;
  -moz-border-radius: 10px;
  border-radius: 10px;
  
  margin-right: 10px;
  margin-left: 10px;
}

.Card {
  width: 40rem;
  margin: 0 auto;
  margin-bottom: 1rem;
  margin-top: 1rem;
}

